# Portfolio-Chatbot

./: Dockerfile  README.md  chatbot_requirements.txt  experiments.ipynb  index.py  index_requirements.txt  main.py  pyproject.toml  requirements.txt
Notebooks/: chunking_eda.ipynb  evaluate_retrieval.ipynb  exploratory_data_analysis.ipynb
configs/: data_config.json
data/: MarketFlow.md  Table Extractor-Making tables searchable for LLMs - Pipeline.md  Table Extractor-Making tables searchable for LLMs.md  Thesis - Layout Aware Metadata Extraction Framework Code Documentation.md  Thesis - Layout Aware Metadata Extraction Framework.md
prompts/: Sanath Vijay Haritsa - About Me.md  Sanath Vijay Haritsa - CV.tex  final_presentation.txt  orchestrator.txt  professional_info.txt  public_persona.txt  system_instructions_template.txt
src/: __init__.py  agent_runner.py  config.py  portfolio_chatbot.py  retrieve_vector_store.py
src/agents/: __init__.py  final_presentation.py  orchestrator.py  professional_info.py  public_persona.py
src/models/: __init__.py  schemas.py
src/tools/: __init__.py  github_repos.py  retrieval.py  social_media_retrieval.py  tracking.py
src/utils/: __init__.py  file_proceessor_for_indexing.py  gcp_buckets.py  langfuse_client.py  vector_store.py
src/vector_store/: __init__.py  processor.py  store.py
static/: footer.html  header.html
