[project]
name = "portfolio-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-experimental>=0.4.0",
    "langchain-openai>=1.0.2",
    "langchain-qdrant>=1.1.0",
    "matplotlib>=3.10.7",
    "openai>=2.7.2",
    "pandas>=2.3.3",
    "pydantic-ai>=1.14.0",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
